gitops/wastebin/wastebin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wastebin
  labels:
    app.kubernetes.io/name: wastebin
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: wastebin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wastebin
    spec:
      containers:
      - name: wastebin
        image: quxfoo/wastebin:latest
        ports:
        - name: http
          containerPort: 8088
---
apiVersion: v1
kind: Service
metadata:
  name: wastebin
spec:
  selector:
    app.kubernetes.io/name: wastebin
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
