gitops/wastebin/wastebin-ingress.yaml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wastebin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging-cloudflare-dns
spec:
  tls:
  - hosts:
    - paste.buc.sh
    - paste.10.0.0.16.nip.io
    secretName: cert-paste-buc-sh
  rules:
  - host: paste.buc.sh
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wastebin
            port:
              number: 80
  - host: paste.10.0.0.16.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wastebin
            port:
              number: 80
